# Personal-AI-Employee

./: CLAUDE.md  pyproject.toml  skills-lock.json
.claude/skills/process-inbox/: SKILL.md
.claude/skills/update-dashboard/: SKILL.md
AI_Employee_Vault/: Company_Handbook.md  Dashboard.md
AI_Employee_Vault/.obsidian/: workspace.json
AI_Employee_Vault/Done/: FILE_20260331_222702_test_report.txt  TASK_20260331_222702_test_report.md  TASK_20260401_000001_test_task.md
AI_Employee_Vault/Inbox/: test_task.md
AI_Employee_Vault/Logs/: activity_log.md
watchers/: base_watcher.py  filesystem_watcher.py
